# BykeEmbedded

./: Cargo.toml
.cargo/: config.toml
m5stick-ble/: Cargo.toml
m5stick-ble/.cargo/: config.toml
m5stick-ble/src/: main.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: gps.rs  main.rs  qrcode.rs  screen.rs  state.rs
