[package]
name = "byke"
version = "0.1.0"
authors = ["Newintel <franck.labracherie@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[workspace]
members = [
    "m5stick-ble",
    "shared"
]

[dependencies]
anyhow = "1.0.68"
critical-section = { version = "1.1.1", features = ["std"] }
embedded-graphics = "0.7.1"
esp-idf-hal = "0.40.1"
esp-idf-sys = { version = "0.32.1", features = ["binstart", "std"] }
esp-println = "0.3.1"
m5-go = { git = "https://github.com/Newintel/M5-go" }
nmea-parser = "0.10.0"
qrcode-generator = "4.1.7"
heapless = "0.7.3"
shared = { path = "shared" }

[build-dependencies]
anyhow = "1.0.68"
embuild = "0.31.0"
