[package]
name = "m5stick-ble"
version = "0.1.0"
authors = ["Newintel <franck.labracherie@gmail.com>"]
edition = "2021"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
pio = ["esp-idf-sys/pio"]

[dependencies]
anyhow = "1.0.68"
esp-idf-hal = "0.40.1"
esp-idf-sys = { version = "0.32.1", features = ["binstart", "std"] }
esp-idf-ble = { git = "https://github.com/Newintel/esp-idf-ble" }
esp-idf-svc = "0.45.0"
log = "0.4.17"
shared = { path = "../shared" }

[build-dependencies]
embuild = "0.31.0"
