[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.70"
serde = { version = "1.0.152", features = ["derive"], default-features = false }
anyhow = "1.0.51"
embedded-graphics = "0.7.1"
profont = "0.6.1"
